<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="This person has no badges"
        android:visibility="visible"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes_trump"
        android:id="@+id/checkBox"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delightful"
        android:id="@+id/checkBox2"
        android:layout_above="@+id/checkBox3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didnt_show"
        android:id="@+id/checkBox3"
        android:layout_above="@+id/checkBox4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accidentally_matching"
        android:id="@+id/checkBox4"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/checkBox5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animal_hater"
        android:id="@+id/checkBox5"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punched_me"
        android:id="@+id/checkBox6"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_phone"
        android:id="@+id/checkBox7"
        android:layout_above="@+id/checkBox8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_funny"
        android:id="@+id/checkBox8"
        android:layout_above="@+id/checkBox9"
        android:layout_alignRight="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox"
        android:layout_marginBottom="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jacob"
        android:id="@+id/checkBox9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X people agreed"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/checkBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X people agreed"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/checkBox8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X people agreed"
        android:id="@+id/textView8"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/textView12"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X people agreed"
        android:id="@+id/textView9"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X people agreed"
        android:id="@+id/textView10"
        android:layout_alignTop="@+id/checkBox5"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X people agreed"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X people agreed"
        android:id="@+id/textView12"
        android:layout_alignTop="@+id/checkBox7"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X people agreed"
        android:id="@+id/textView13"
        android:layout_alignTop="@+id/checkBox2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X people agreed"
        android:id="@+id/textView14"
        android:layout_alignTop="@+id/checkBox9"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>